--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
-body{
-    background-image: url('https://goo.gl/images/QaeHFF') fixed;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.container{
+
+body{
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #ffffff;
     width: 50%;
     padding: 0.5em;
     padding-top: 1em;
@@ -9,29 +14,48 @@ body{
     border-radius: 1%;
     margin: auto;
     text-align: center;
-    font-family: 'Roboto Condensed', sans-serif;
 }
+
+.container{
+    background-color: #6a6a6a;
+}
+
+h1{
+    text-align: left;
+}
+
 .button{
     background-color: lightgray;
     padding: 0.5em;
     border: 0.25em solid gray;
     margin: auto;
     text-align: center;
-    border-radius: 20%;
+    border-radius: 25%;
 }
-ul{
-    list-style-type: none;
+
+.progress{
     margin: 0;
-    padding:0;
+    padding: 0;
+    font-size: 1.75em;
+    text-align: left;
 }
-@media screen and (min-width: 310px) {
-    .container {
-      width: 90%;
-    }
-  }
-.startQuiz{
 
+ul li{
+    list-style-type: none;
+    display: inline;
 }
-.quizStage{
 
+.questionForm{
+    width: 50%;
+}
+
+.option{
+    text-align: center;
+    background-color: #ffffff;
+    border: 2px solid gray;
+    width: 400px;
+}
+
+.submitAnswer{
+    padding-top: 5px;
 }
