--- a/index.css
+++ b/index.css
@@ -62,6 +62,11 @@ ul li{
     width: 50%;
     display: inline-block;
 }
+img{
+    width:100%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
 
 @media screen and (max-width: 570px){
     .container{
@@ -73,6 +78,6 @@ ul li{
     }
 
     .ansOpt{
-        width: 80%;
+        width: 900%;
     }
 }
